2005-04-27  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions/plustek.desc: Added UMAX Astranet ia101.

2005-04-26  Julien Blache <jb@jblache.org>

	* tools/hotplug/libsane.usermap: Added Epson Stylus CX3650
	(04b8/080e), from Daniel Sobe.

2005-04-25  Gerhard Jaeger <gerhard@gjaeger.de>

	* include/sane/sanei_pp.h, sanei/sanei_pp.c: Added outb_eppdata
	  functionality (thanks to Anderson Lizardo).
	* backend/plustek-pp_procs.h, backend/plustek-pp_io.c,
	  backend/plustek-pp_misc.c: Fixed compilation problem for kernel
	  module with gcc-3.4 compiler.
	* doc/plustek/Plustek-PARPORT.changes: Update.
	* backend/plustek-pp.c: Bumped build number.

2005-04-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/hotplug/libsane.usermap: Fixed Minolta Scan Dual III entry
	  (bug #301512).
	* doc/descriptions/mustek.desc: Added Mustek TwainScan II SP (bug
	  #301217). 
	* doc/descriptions-external/viceo.desc: Added Primax Colorado 2200
	  USB.
	* doc/descriptions/unsupported.desc: Added Canon PIXMA MP110.
	* AUTHORS: Marked Kazuya Fukuda as active.
	
2005-04-23  Julien Blache <jb@jblache.org>

	* LICENSE: Add an FAQ section.
	* tools/hotplug/libsane.usermap: Added Genius ColorPage Vivid3xe
	(0458/2017), from Ramiro Aceves through Debian BTS.

2005-04-18  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek-usbhw.c, backend/plustek-usbscan.c: Fixed
	  problem, that has been reported in conjunction with backtracking
	  and sensor-speedup option.
	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Bumped build number.

2005-04-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Added and updated
	  several scanners.

2005-04-15 Gerard Klaver <gerard at gkall dot hobby dot nl>

	* sanei/sanei_usb.c More debug info for control and isochronous mode
	  Detection added for endpoints for  configurations, interface and
	  altsetting numbers > 0